clang/test/BSC/Negative/OwnedStruct/destructor/unique_destructor1.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct A {    
  ~A(A this) { 
  }
  ~A() { // expected-error {{the parameter of destructor must be 'A this'}}
  }
};

_Owned struct B<T> {    
  ~B(B<T> this) { 
  }
  ~B() { // expected-error {{the parameter of destructor must be 'B<T> this'}}
  }
};

int main() {
    return 0;
}